# ms_ai_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: classification_jobs.py  health.py
app/contracts/: __init__.py  events.py
app/core/: config.py
app/db/: session.py
app/messaging/: __init__.py  consumer.py  publisher.py
app/models/: classification_job.py  classification_result.py  extracted_transaction.py  user_correction.py
app/repositories/: classification_job_repository.py
app/schemas/: api.py  classification.py  events.py  extraction.py
app/services/: classification_pipeline.py  event_factory.py  openai_classifier.py  pdf_extractor.py  rest_callbacks.py  transaction_normalizer.py
